testrestapi/src/main/java/com/test/restservice/web/error/BaseAppException.java
package com.test.restservice.web.error;

public class BaseAppException extends RuntimeException {
}
